--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>外包公司查询</title>
-  <script src="./外包清单.js"></script>
+  <script src="./list.js"></script>
   <style>
     * {
       margin: 0;
